--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive"] }
-crossterm = "0.29.0"
-ratatui = { version = "0.30.0", features = ["crossterm_0_29", "serde"] }
+crossterm = "0.28.0"
+ratatui = { version = "0.29.0", features = ["serde"] }
 reqwest = { version = "0.12.28", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
+tui-textarea = { version = "0.7.0", features = ["crossterm"] }
